[gd_scene load_steps=9 format=3 uid="uid://61fhsfc58pae"]

[ext_resource type="Script" path="res://scripts/ui/tool_select.gd" id="1_in3uv"]
[ext_resource type="Texture2D" uid="uid://c0gf6h8hxbp27" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/Setting menu.png" id="2_mbbq8"]
[ext_resource type="Texture2D" uid="uid://carsb8bxltv7y" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/hoe_button.png" id="3_hh7ja"]
[ext_resource type="Texture2D" uid="uid://dj1d87fbnenck" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/axe_button.png" id="5_ywmv4"]
[ext_resource type="Texture2D" uid="uid://wulmltj55g05" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/watering_can_button.png" id="6_h7g6f"]
[ext_resource type="Texture2D" uid="uid://c1lkxffeqxx4c" path="res://assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Other UI sprites/tool_menu_corner.png" id="7_hg8vh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_816bk"]
texture = ExtResource("2_mbbq8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0

[sub_resource type="TileSet" id="TileSet_7kj6w"]
sources/0 = SubResource("TileSetAtlasSource_816bk")

[node name="ToolSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
script = ExtResource("1_in3uv")

[node name="MenuTiles" type="TileMap" parent="."]
position = Vector2(-30, 22)
tile_set = SubResource("TileSet_7kj6w")
format = 2
layer_0/tile_data = PackedInt32Array(65532, 524288, 0, 131068, 524288, 5, 196604, 524288, 6, 262140, 524288, 7, 65533, 589824, 0, 131069, 589824, 5, 196605, 589824, 6, 262141, 589824, 7, 65534, 655360, 0, 131070, 655360, 5, 196606, 655360, 6, 262142, 655360, 7, 65535, 720896, 0, 131071, 589824, 3, 196607, 589824, 3, 262143, 589824, 4, 0, 786432, 0, 65536, 655360, 3, 131072, 589824, 6, 196608, 589824, 7, 1, 851968, 0, 65537, 720896, 3, 131073, 655360, 6, 196609, 655360, 7, 2, 720896, 0, 65538, 720896, 1, 131074, 720896, 2, 196610, 786432, 4, 3, 786432, 0, 65539, 786432, 1, 131075, 786432, 2, 196611, 851968, 4, 327676, 524288, 8, 327677, 589824, 8, 327678, 655360, 8, 327679, 720896, 8, 262144, 589824, 8, 262145, 655360, 8, 262146, 589824, 8, 262147, 655360, 8, 65540, 720896, 1, 131076, 720896, 2, 196612, 720896, 7, 262148, 720896, 8, 65541, 786432, 1, 131077, 786432, 2, 196613, 786432, 7, 262149, 786432, 8, 65542, 851968, 1, 131078, 851968, 2, 196614, 851968, 7, 262150, 851968, 8, 65543, 917504, 1, 131079, 917504, 2, 196615, 917504, 7, 262151, 917504, 8, 65544, 983040, 1, 131080, 983040, 2, 196616, 983040, 7, 262152, 983040, 8, 4, 720896, 0, 5, 786432, 0, 6, 851968, 0, 7, 917504, 0, 8, 983040, 0)

[node name="ToolsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = 39.0
offset_right = 30.0
offset_bottom = 58.0
text = "TOOLS"
horizontal_alignment = 1

[node name="HoeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -59.0
offset_top = 55.0
offset_right = -35.0
offset_bottom = 79.0
texture_normal = ExtResource("3_hh7ja")

[node name="AxeButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 55.0
offset_right = 19.0
offset_bottom = 79.0
texture_normal = ExtResource("5_ywmv4")

[node name="WaterButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 55.0
offset_right = 73.0
offset_bottom = 79.0
texture_normal = ExtResource("6_h7g6f")

[node name="Corner1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -79.0
offset_top = 37.0
offset_right = -39.0
offset_bottom = 77.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_hg8vh")

[node name="Corner2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -79.0
offset_top = 78.0
offset_right = -39.0
offset_bottom = 118.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_hg8vh")

[node name="Corner3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 78.0
offset_right = 129.0
offset_bottom = 118.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_hg8vh")

[node name="Corner4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 37.0
offset_right = 129.0
offset_bottom = 77.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_hg8vh")

[connection signal="pressed" from="HoeButton" to="." method="_on_hoe_button_pressed"]
[connection signal="pressed" from="AxeButton" to="." method="_on_axe_button_pressed"]
[connection signal="pressed" from="WaterButton" to="." method="_on_water_button_pressed"]
